# r1

./: .dockerignore  .editorconfig  .env.example  .gitignore  Dockerfile  README.md  config.py  docker-compose.prod.yml  docker-compose.yml  gunicorn_config.py  package-lock.json  pyproject.toml  requirements.txt  run.py  wsgi.py
.github/workflows/: build.yml  deploy.yml
app/: __init__.py  circuit.py  extensions.py  health.py  proxy.py  routes.py  utils.py  views.py
app/static/: articles.mjs  dashboard.css  dashboard.js  editor.mjs  globalStyles.js  login.css  login.js  register.css  register.js  skeleton.css  style.css
app/static/component/: articleTable.mjs  button.mjs  editor.mjs  header.mjs  input.mjs  modal.mjs  navbar.mjs  pagination.mjs  tags.mjs  toast.mjs
app/static/utils/: auth.js  config.js  preloader.mjs  router.mjs  routes.mjs
app/templates/: create.html  dashboard.html  edit.html  index.html  login.html  register.html  user-layout.html  user.html
scripts/: bootstrap.sh  deploy.sh  rollback.sh
